vercre-didcore/src/document/snapshots/vercre_didcore__document__service__tests__deserialize_mix.snap
---
source: vercre-didcore/src/document/service.rs
assertion_line: 357
expression: doc
---
service:
  - id: "did:example:123456789abcdefghi#openid"
    type: OpenIdConnectVersion1.0Service
    serviceEndpoint:
      - "https://openid.example.com/"
      - origin:
          - "https://openid.example.com/"
        alt:
          - "https://auth.example.com/"

