vercre-didcore/src/document/snapshots/vercre_didcore__document__service__tests__deserialize_single_map.snap
---
source: vercre-didcore/src/document/service.rs
assertion_line: 306
expression: doc
---
service:
  - id: "did:example:123456789abcdefghi#openid"
    type: OpenIdConnectVersion1.0Service
    serviceEndpoint:
      origin:
        - "https://openid.example.com/"

